corrected CSS text-align block__header

--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -793,7 +793,7 @@ p {
   }
 
   .banner__content {
-    text-align: left;
+    text-align: center;
     align-self: center;
   }
 }
